# Dynabook

./: .gitignore  .gitlab-ci-staging.yml  basicLaunch.sh  container.sh  kuberneets.yml  launch.sh  org.dynabook.Dynabook.yml  squeak-install.txt
booter/: .gitignore  load-booter.sh  mkinitcpio.conf  mkmkinitcpio.conf.sh
booter/booter/: Cargo.toml
booter/booter/src/: lf.rs  main.rs  memm.rs  secure_struct.rs  wayland.rs
booter/swot/: Cargo.toml  README.md
booter/swot/.hg/: dirstate  hgrc  undo.desc
booter/swot/.hg/cache/: branch2-base  rbc-revs-v1  tags2-visible
booter/swot/.hg/store/: 00changelog.i  00manifest.i  fncache  undo
booter/swot/.hg/store/data/: _cargo.toml.i  _r_e_a_d_m_e.md.i  build.rs.i  xdg-shell-protocol.c.i  ~2ehgignore.i
booter/swot/.hg/store/data/src/: main.rs.i  wlr.rs.i
booter/swot/.hg/store/data/wlr/: wrapper.h.i  xdg-shell-protocol.h.i
booter/swot/src/: main.rs
booter/swot/wlr/: wrapper.h
kubernetes/: pod.yml
native/: sq_runtime_socket.sh
pow/: Camera.gd  project.godot  scene.tscn
squeak/: .gitignore  0-Preload-Squeak310.st  1-Monticello2.st  4242-CuisCore-PreEnvironment-2020Jul01-14h23m-KenD.001.cs.st  4243-CuisCore-EnvPart2-2020Jun21-01h19m-KenD.001.cs.st  4244-CuisCore-EnvPart3-2020Jul01-14h29m-KenD.001.cs.st  4252-article-tweaks-LeandroCaniglia-2020Jul05-16h47m-LC.001.cs.st  4253-AutoCompleterNotSmalltalkSpecific-JuanVuletich-2020Jul06-09h21m-jmv.001.cs.st  Animator.pck.st  Cuis5.0-4191.user.changes  Cuis5.0-4244.user.changes  Cuis5.0-4253.user.changes  CuisCore-LeftScroll-stp.cs.st  Dockerfile  JSBridge.st  asm.rs  (+148 more)
(+18 files in other folders)
