[package]
name = "booter"
version = "0.1.0"
authors = ["Graham Kelly <gkgoat6700@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18.0"
shredder = "0.1.2"
shared_memory = "0.11.1"

[target.'cfg(feature = "web")'.dependencies]
stdweb = "0.4.20"