[package]
name = "swot"
version = "0.1.0"
authors = ["Simon Heath <icefox@dreamquest.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memoffset = "0.5"
lazy_static = "1"
nix = "0.18.0"

[build-dependencies]
bindgen = "0.53"
